<resources>
    <string name="app_name">PassProtecter</string>

    <!--
    Drop-down menu stuff
    -->
    <string name="action_settings">Settings</string>
    <string name="action_addPassword">Add Password</string>

    <!--
    General stuff
    -->
    <string name="button_create_password_file">Create a password file</string>

    <!--
    MainActivity stuff
    -->
    <string name="button_choose_password_file">Choose a password file</string>
    <string name="textView_instructions">Here are your saved passwords</string>

    <!--
    CreateFile stuff
    -->
    <string name="textView_file_name">Name of the file</string>
    <string name="hint_file_name">Type the name of the file</string>
    <string name="textView_main_password">Main password</string>
    <string name="hint_main_password">Give a main password for the password file</string>
    <string name="hint_main_password_confirmation">Re-type the main password</string>

    <!--
    OpenFile stuff
    -->
    <string name="textView_found_files">List of found files</string>
    <string name="button_back">&#8592;Back</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>

    <!--
    PasswordAddPopUp stuff
    -->
    <string name="textViewIdentifier">Service</string>
    <string name="hint_identifier">Where do you use this password?</string>
    <string name="textView_password">Password</string>
    <string name="hint_password">Give the password</string>
    <string name="hint_password_confirmation">Re-type the password</string>
</resources>
