<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/password_popup_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/linearLayoutIdentifier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/textViewIdentifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            android:text="@string/textViewIdentifier"/>
        <EditText
            android:id="@+id/editTextIdentifier"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryText"
            android:hint="@string/hint_identifier"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayoutPassword"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutIdentifier"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            android:text="@string/textView_password"/>
        <EditText
            android:id="@+id/editTextPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryText"
            android:hint="@string/hint_password"/>
        <EditText
            android:id="@+id/editTextPasswordConfirmation"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryText"
            android:hint="@string/hint_password_confirmation"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_below="@id/linearLayoutPassword"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="2">
        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorRed"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_ok"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorGreen"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>