<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/password_popup_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:padding="20dp">

    <TextView
        android:id="@+id/textViewMainPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp"
        android:text="@string/textView_main_password"/>

    <LinearLayout
        android:id="@+id/linearLayoutMainPassword"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textViewMainPassword"
        android:layout_marginTop="40dp"
        android:padding="20dp">
        <EditText
            android:id="@+id/editTextMainPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryText"
            android:hint="@string/hint_main_password"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_below="@+id/linearLayoutMainPassword"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorRed"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_ok"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorGreen"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>